# medx

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cleanup_docker.sh  docker-compose.yml  docker-entrypoint.sh  medilingence.md  pyproject.toml
alembic/: env.py
alembic/versions/: 3e5cd5ca4177_initial_schema.py  a1b2c3d4e5f6_phase2_reconcile_flags.py  a7b8c9d0e1f2_patient_portal_schema.py  a7c8d9e0f1a2_phase3_reconcile_review_fields.py  b2c3d4e5f6a7_phase3_patient_expansion.py  b8c9d0e1f2a3_agent_run_logs.py  c3d4e5f6a7b8_phase3_1_reconcile_severity.py  d4e5f6a7b8c9_phase4c_llm_call_log.py  e5f6a7b8c9d0_nullable_new_extraction_id.py  f6a7b8c9d0e1_llm_call_logs_timestamp_defaults.py
app/: config.py  deps.py  logging.py  main.py  security.py
app/agents/: checkpointer.py  graph.py  registry.py  run_logging.py  state.py
app/agents/chat/: agent.py  signatures.py  tools.py
app/agents/clinical_summary/: agent.py  signatures.py  tools.py
app/agents/data_steward/: agent.py  signatures.py  tools.py
app/agents/document_intelligence/: agent.py  signatures.py  tools.py
app/ai/: __init__.py  client.py  dspy_config.py  errors.py  models.py
app/ai/agents/: __init__.py  chat.py  classify.py  doctype.py  extract.py  extract_patient_info.py  persist.py  plan_extract.py  profile_reconcile.py  router.py  summarize.py
app/ai/schemas/: __init__.py  classify.schema.json  discharge_summary.schema.json  history_physical.schema.json  imaging_report.schema.json  lab_panel.schema.json  med_list.schema.json
app/api/: auth.py  chat.py  documents.py  extractions.py  patients.py
app/audit/: middleware.py
app/db/: base.py  session.py
app/db/models/: __init__.py  agent_run_log.py  audit.py  clinical.py  document.py  llm_call_log.py  patient.py  portal.py  reconcile.py  summary.py  tenant.py
app/db/repositories/: allergy.py  audit.py  base.py  dashboard.py  document.py  (+8 more)
app/events/: bus.py
app/ingestion/: ocr.py  store.py
app/optimization/: compiled_agents.py  metrics.py  optimizer.py  run_all.py
app/queue/: __init__.py  asyncio_queue.py  jobs.py
app/schemas/: auth.py  document.py  extraction.py  patient.py
app/validation/: __init__.py  extraction.py  upload.py
app/web/: portal_routes.py  routes.py  templates.py
scripts/: create_admin.py  gen_sample_pdf.py  gen_synthetic_patients.py
tests/: conftest.py  test_phase0_exit.py  test_phase1_5_dashboard.py  test_phase1a_documents.py  test_phase1b_extraction.py  test_web_ui.py
(+30 files in other folders)
