[project]
name = "medx"
version = "0.1.0"
description = "MedX — lightweight AI-native EHR (cardiology R&D)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "structlog>=24.4",
    "jinja2>=3.1",
    "pypdf>=5.1",
    "openai>=1.55",
    "tenacity>=9.0",
    "jsonschema>=4.23",
    "sse-starlette>=2.1",
    "pdf2image>=1.17",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.21",
    "reportlab>=4.0",
]
ocr-local = [
    "marker-pdf>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "evals: slow AI evaluation tests; require OPENROUTER_API_KEY and hit the live API",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
